--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fonts/themify/style.css">
 	<link rel="stylesheet" href="fonts/fontawesome/font-awesome.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/break-down.css">
 	<link rel="stylesheet" href="slider/css/flexslider.css" type="text/css">
+	<link rel="stylesheet" href="css/break-down.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style.css">
+
 
 
 
@@ -37,9 +38,9 @@
 					
 						<div class="nav-options col-md-8 col-xs-8"> 	
 							<ul>
-								<li><a href="contact-us.html">Contact us</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="work.html">Work</a></li>
+								<li><a href="pages/contact/index.html">Contact us</a></li>
+								<li><a href="pages/about/index.html">About</a></li>
+								<li><a href="pages/work/index.html">Work</a></li>
 								<li><a href="index.html">Home</a></li>
 							</ul>
 						</div> <!-- nav-options -->
@@ -50,9 +51,9 @@
 						<div class="nav-colaps-content">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="work.html">Work</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="contact-us.html">Contact us</a></li>
+								<li><a href="pages/work/index.html">Work</a></li>
+								<li><a href="pages/about/index.html">About</a></li>
+								<li><a href="pages/contact/index.html">Contact us</a></li>
 							</ul>
 						</div> <!-- nav-colaps-content -->
 				    </div><!-- /.navbar-collapse -->
@@ -65,11 +66,40 @@
 
 
 <!-- =================================END OF NAVE=============================== -->
+	<div class="clearfix"></div>
 
-	<div class="slider">
+	 
+
+		<!-- Place somewhere in the <body> of your page -->
+		<div class="flexslider slider">
+			<div class="container">
+				<ul class="slides">
+					<li>
+						<div class="slid-1 col-md-offset-2 col-md-7 col-xs-offset-2 col-xs-10">
+							<h1>WDHL Construction</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo numquam eaque possimus distinctio eum vo
+								luptate autem enim quisquam eius illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, fuga sunt praesentium, distinctio odio delectus nihil earum doloremque, possimus modi magni, consequuntur consectetur. Blanditiis provident iusto et id laborum nostrum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quos accusantium commodi voluptatibus voluptatum nobis at iusto, obcaecati repudiandae sequi eius molestias, dicta, minima eaque fugiat ipsum quam. Eos, quis.</p>
+							<a href="#" class="btn btn-sm btn-contact col-md-3 col-sm-4 btn-default">Contact Us</a>
+						</div>
+					</li>
+
+					<li>
+						<div class="slid-2 col-md-offset-2 col-md-7 col-xs-offset-2 col-xs-10">
+							<h1>WHDL Construction</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo numquam eaque possimus distinctio eum vo
+								luptate autem enim quisquam eius illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, fuga sunt praesentium, distinctio odio delectus nihil earum doloremque, possimus modi magni, consequuntur consectetur. Blanditiis provident iusto et id laborum nostrum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quos accusantium commodi voluptatibus voluptatum nobis at iusto, obcaecati repudiandae sequi eius molestias, dicta, minima eaque fugiat ipsum quam. Eos, quis.</p>
+							<a href="#" class="btn btn-sm btn-contact col-md-3 col-sm-4 btn-default ">Contact Us</a>
+						</div>
+					</li>
+
+
+					
+				</ul>
+			</div> <!-- container -->
+
+		</div>
+
 		
-	</div> <!-- slider -->
-
 
 
 
@@ -208,10 +238,10 @@
 
 
 
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
 <script src="slider/js/jquery.flexslider.js"></script>
+
+<script src="js/main.js"></script>
 </body>
 </html>
